# siege-spider-api

./: .gitignore  Procfile  README.md  alembic_readme.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04d6ca6fd2bf_add_dates_to_matches_table.py  0e46d7824455_add_profile_id.py  257175848c51_initial_migration.py  47f7f55a9c9b_get_client_version.py  627d723f8d40_add_signature_column_to_matches_table.py  8e7045ae63af_add_matches_table.py  98458740f8f2_add_request_client_host_to_matches_table.py  aa610c8ae54e_add_users_table.py  aab9f2928109_fix_relation_back_population.py  ee9bba34d91e_add_client_download_url.py
database/: handler.py  models.py
rest/: client.py  ingest.py  lookup.py  user.py
services/: ban_ws_listener.py  linked_account_parser.py  redis_client.py  siegeapipatched.py  statscc_handler.py  twitch_handler.py  ubisoft_handler.py  webhook_agent.py  webhook_exception_handler.py
services/user/: pwd.py  token.py
wrapper/: client.py  constants.py  helpers.py  models.py
